# cnsoftbei_2024_A8

./: .gitignore  5.18_第二次组会.md  A8_基于国产操作系统的应用融合软件.md  CMakeLists.txt  README.md  cnsoftbei_A8.sln  main.c
RemoteApp/: RemoteApp.sln  SKRO_rdp.sln
RemoteApp/RemoteApp/: App.cs  Err.cs  ErrType.cs  Form1.Designer.cs  Form1.cs  ImouseAction.cs  Kernel.cs  MouseAction.cs  Network.cs  NetworkState.cs  Program.cs  RemoteApp - 快捷方式.lnk  RemoteApp.cs  RemoteApp.csproj
Server/: SKRO_server.sln  Server.sln
Server/Server/: Class.cs  Form1.Designer.cs  Form1.cs  History.cs  ImouseAction.cs  Kernel.cs  MouseAction.cs  MyClass.cs  Network.cs  Program.cs  SKRO_server.csproj  Server.csproj
assets/: open  xfreerdp
cnsoftbei_A8/: App.cs  Err.cs  Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Form3.Designer.cs  Form3.cs  Kernel.cs  MouseAction.cs  MyClass.cs  Network.cs  Program.cs  RemoteApp.cs  cnsoftbei_A8.csproj  cnsoftbei_A8.sln
cnsoftbei_A8/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
cnsoftbei_A8/cnsoftbei_A8/: Err.cs  ErrType.cs  Form1.Designer.cs  Form1.cs  IMouseAction.cs  Kernel.cs  MouseAction.cs  Network.cs  Program.cs  QuestType.cs  (+2 more)
data/: history  path
include/: err.h  info.h  kernel.h  network.h  rdp.h  ui.h  uifunc.h  xrdp.h
src/: bar.c  content.c  frame.c  kernel.c  network.c  rdp.c  xrdp.c
工具知识文件/: linux环境安装.md  操作系统安装教程.md
工程文档/: 软件设计说明书.md  需求规格说明书.md
知识文档/: Windows开发.md  git常用指令.md  linux打包安装.md  linux环境安装.md  linux编程教程.md  windows打包安装.md  windows环境安装.md  一些系统操作.md  卸载.md  开发中遇见的问题.md  操作系统安装教程.md
组会文件/: 4.20_第一次组会.md  7.08_代码设计.md
视频文档/: 视频框架.md  视频脚本.md
(+14 files in other folders)
